Fix monsterized icons spacing and column width

--- a/torchci/components/JobConclusion.module.css
+++ b/torchci/components/JobConclusion.module.css
@@ -23,7 +23,6 @@
   background-size: 152px 426px; /* total size of the spritesheet (downscaled 1.5x) */
   display: inline-block;
   vertical-align: middle;
-  margin-left: 2px;
   image-rendering: pixelated;
 }
 
@@ -45,13 +44,13 @@
 .monster_with_count {
   position: relative;
   display: inline-block;
-  margin: 0 1px;
+  margin: 0;
 }
 
 .monster_count {
   position: absolute;
   bottom: -1px;
-  right: -4px;
+  right: -2px;
   font-size: 8px;
   color: var(--color-failure);
   font-weight: bold;
