--- a/torchci/components/hud.module.css
+++ b/torchci/components/hud.module.css
@@ -20,7 +20,8 @@
   width: 8ch;
 }
 .colJob {
-  width: 1.3ch;
+  width: 1.2ch;
+  min-width: 14px;
 }
 .colAuthor {
   width: 12ch;
